Bug 494837 - Video corruption on portrait monitor
Summary: Video corruption on portrait monitor
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 6.2.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 494857 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-10-16 01:19 UTC by 905002146tix
Modified: 2024-10-16 18:57 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
wrong orientation, wrong size. right half flashing. (1.55 MB, image/jpeg)
2024-10-16 01:19 UTC, 905002146tix
Details
kwin log (6.63 KB, text/x-log)
2024-10-16 01:20 UTC, 905002146tix
Details

Note You need to log in before you can comment on or make changes to this bug.
Description 905002146tix 2024-10-16 01:19:46 UTC
Created attachment 174865 [details]
wrong orientation, wrong size. right half flashing.

SUMMARY

Video glitch for my dual monitor setup after updated to 6.2.1-1.

Only affect **portrait orientation** monitors. Confirmed on both monitors.

STEPS TO REPRODUCE
1. set the second screen to portrait orientation (90' clockwise or counterclockwise)

OBSERVED RESULT
Severe glitch (flash, glitch, incorrect size, wrong display, random corruption...). Unusable.

ADDITIONAL INFO
- wayland
- nvidia-open-dkms 560.35.03-14
the malfunctioned monitor is on DP-1 port of the bug report.
Comment 1 905002146tix 2024-10-16 01:20:11 UTC
Created attachment 174866 [details]
kwin log
Comment 2 905002146tix 2024-10-16 02:42:15 UTC
recreated with single monitor setup, so changed component to general.

both monitor kinda "splitted in half", one with compressed and misaligned texts and pictures, another half will only grey out/ glitch, flash.
Comment 3 Zamundaaa 2024-10-16 17:06:33 UTC
*** Bug 494857 has been marked as a duplicate of this bug. ***
Comment 4 strudelkuchen 2024-10-16 17:20:56 UTC
https://invent.kde.org/plasma/kwin/-/merge_requests/6645

this fixed the regression for me.
Comment 5 strudelkuchen 2024-10-16 17:26:19 UTC
(In reply to strudelkuchen from comment #4)
> https://invent.kde.org/plasma/kwin/-/merge_requests/6645
> 
> this fixed the regression for me.

*on 6.2
Comment 6 Zamundaaa 2024-10-16 18:43:58 UTC
Git commit 8a8c617ddde3e7a9167df1242934f4f8bbcb4945 by Xaver Hugl.
Committed on 16/10/2024 at 18:11.
Pushed by zamundaaa into branch 'master'.

backends/drm: transform damage to match the framebuffer

Otherwise, the repainted region can be completely wrong, which breaks damage tracking very badly

M  +7    -5    src/backends/drm/drm_egl_layer_surface.cpp

https://invent.kde.org/plasma/kwin/-/commit/8a8c617ddde3e7a9167df1242934f4f8bbcb4945
Comment 7 Zamundaaa 2024-10-16 18:57:09 UTC
Git commit f46a1c2fdb269c8403533e34504c9a583ffb9de7 by Xaver Hugl.
Committed on 16/10/2024 at 18:44.
Pushed by zamundaaa into branch 'Plasma/6.2'.

backends/drm: transform damage to match the framebuffer

Otherwise, the repainted region can be completely wrong, which breaks damage tracking very badly


(cherry picked from commit 8a8c617ddde3e7a9167df1242934f4f8bbcb4945)

Co-authored-by: Xaver Hugl <xaver.hugl@gmail.com>

M  +7    -5    src/backends/drm/drm_egl_layer_surface.cpp

https://invent.kde.org/plasma/kwin/-/commit/f46a1c2fdb269c8403533e34504c9a583ffb9de7