backends/drm: transform damage to match the framebuffer

Otherwise, the repainted region can be completely wrong, which breaks damage tracking very badly

BUG: 494837